<resources>
    <string name="app_name">budgetApplication</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="loginNow">Login Now</string>
    <string name="alreadyAccount">If you have an account, LOGIN!</string>
    <string name="emReq">Email is required!</string>
    <string name="passReq">Password is required!</string>
    <string name="addExpensee"> Add </string>
    <string name="type_proper_email">Type a proper EMAIL address</string>
    <string name="type_proper_password">Password with min. 6 letters</string>
    <string name="show">Show</string>
    <string name="add">Add</string>
    <string name="chart">Chart</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="addingExpense">Adding an expense</string>
    <string name="hintPrice">Price</string>
    <string name="chartCategory">Category</string>



    <array name="kategoria">
        <item>Food</item>
        <item>Fuel</item>
        <item>Entertainment</item>
        <item>Clothes</item>
        <item>Travel</item>
    </array>

    <string name="check">check</string>
    <string name="englishLib">englishlib</string>
    <string name="moneyweSpent">All money that we spend</string>
</resources>