<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_show"
        android:icon="@drawable/ic_pageview_black_24dp"
        android:title="@string/show" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/add" />

    <item
        android:id="@+id/nav_chart"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="@string/chart" />

    <item
        android:id="@+id/nav_book"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/books" />

    <item
        android:id="@+id/nav_youtubeSearch"
        android:icon="@drawable/ic_youtube_searched_for_black_24dp"
        android:title="@string/search" />
</menu>